[tool.poetry]
name = "cpu"
version = "0.1.0"
description = ""
authors = ["MahdiHaghverdi <mahdihaghverdliewpl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
